--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             <a href="#" class="btn">Todays Menu</a>
         </div>
         <div class="home-image">
-            <img src="chicken.jpg.jpg" >
+            <img src="nyama.jpg" >
 
         </div>
         <!--=======================SECTION ABOUT========================-->
     </section>
     <section class="about" id="about">
         <div class="about-image" >
-            <img src="rice-with-chicken-vegetables-stick_140725-7053.jpg">
+            <img src="jollofrice.jpg">
 
         </div>
         <div class="about-text">
@@ -66,7 +66,7 @@
         <div class="menu-container">
             <div class="box">
                 <div class="box-image">
-                    <img src="penne-pasta-tomato-sauce-with-chicken-tomatoes-wooden-table_2829-19739.jpg">
+                    <img src="rice.jpg">
 
 
                 </div>
@@ -81,7 +81,7 @@
             
             <div class="box">
                 <div class="box-image">
-                    <img src="top-view-meat-sauce-soup-with-potatoes-greens-dark-floor_140725-76779.jpg">
+                    <img src="burger.jpg">
 
 
                 </div>
@@ -96,7 +96,7 @@
            
             <div class="box">
                 <div class="box-image">
-                    <img src="side-view-pilaf-with-stewed-beef-meat-plate_141793-5057.jpg">
+                    <img src="kuku.jpg">
 
 
                 </div>
@@ -213,4 +213,5 @@
     </section>
     <link rel="stylesheet" href="script.js">
 </body>
+
 </html>
